[tool.poetry]
name = "pyheap"
version = "0.1.0"
description = ""
authors = ["Ivan Yurchenko <ivan@ivanyu.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
