[tool.poetry]
name = "pyheap-ui"
version = "0.6.0"
description = ""
authors = ["Ivan Yurchenko <ivan@ivanyu.me>"]
license = "Apache License 2.0"
packages = [{include = "pyheap_ui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
typing-extensions = "^4.4.0"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
