[tool.poetry]
name = "pyheap"
version = "0.3.0"
description = ""
authors = ["Ivan Yurchenko <ivan@ivanyu.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.6"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
