[tool.poetry]
name = "pyheap"
version = "0.6.1"
description = ""
authors = ["Ivan Yurchenko <ivan@ivanyu.me>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pyelftools = "^0.30"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^23.10"
pex = "^2.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
